--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -8,13 +8,13 @@
     <version>${revision}</version>
     <packaging>pom</packaging>
     <properties>
-        <revision>1.1.1</revision>
+        <revision>1.1.2</revision>
         <maven.flatten.version>1.2.7</maven.flatten.version>
         <maven.gpg.version>1.6</maven.gpg.version>
     </properties>
 
     <name>${project.artifactId}</name>
-    <description>The enodeframework is devoted to helping engineers develop scalable applications.</description>
+    <description>The enodeframework Bill of Materials.</description>
     <url>http://www.enodeframework.org</url>
 
     <licenses>
