--- a/enode/pom.xml
+++ b/enode/pom.xml
@@ -11,6 +11,7 @@
     </parent>
     <artifactId>enode</artifactId>
     <name>${project.artifactId}</name>
+    <description>The enodeframework core implementation.</description>
     <version>${revision}</version>
     <dependencies>
         <dependency>
