--- a/pg/pom.xml
+++ b/pg/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <artifactId>enode-pg</artifactId>
     <name>${project.artifactId}</name>
-    <description>enodeframework eventstore postgresql driver</description>
+    <description>PostgreSQL driver for enodeframework.</description>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
