--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <revision>1.1.1</revision>
+        <revision>1.1.2</revision>
         <maven.skip.deploy>false</maven.skip.deploy>
         <maven.jar.version>3.2.0</maven.jar.version>
         <maven.surefire.version>2.22.2</maven.surefire.version>
@@ -56,7 +56,7 @@
     </properties>
 
     <name>${project.artifactId}</name>
-    <description>The enodeframework is devoted to helping engineers developing scalable applications.</description>
+    <description>The enodeframework parent dependencies.</description>
     <url>http://www.enodeframework.org</url>
 
     <licenses>
